@@ -14,6 +14,8 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Fixed the VIDEO enumeration for system details info.
+
 * [DanielPharos]: Fixed the Reset-button in the Configuration to do what people expected it to do.
 
 * [DanielPharos]: Fixed several leaks on error code paths, and a wrong Win32 API call
